<resources>
    <string name="app_name">Áxxia Data Collector
    </string>
    <string name="add_item_text">Adicionar Itens</string>
    <string name="consult_data">Carregar Banco de Dados</string>
    <string name="select_item">Escolha uma das opções para adicionar um item</string>
    <string name="new_scan_text">Escanear Código de Barras</string>
    <string name="empty_button">Inserir Manualmente</string>
    <string name="serial_number_text">Digitar Número de Série</string>
    <string name="continue_button">Continuar</string>
    <string name="ManualInsert">Inserir Manualmente</string>
    <string name="state_question">Qual o estado deste item?</string>
    <string name="no_conditions_text">Sem Condiçoes</string>
    <string name="bad_text">Ruim</string>
    <string name="item_status_text">Qual o estado deste item?</string>
    <string name="item_location">Localização do item</string>
    <string name="observation_text">Observações</string>
    <string name="add_picture_text">Adicionar Fotografia?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">Concluir</string>
    <string name="content_description_camera">Acessa a câmera do dispositivo</string>
    <string name="t2_information_text">Preencha ou altere os dados encontrados abaixo</string>
    <string name="number">Número da Placa Antiga:</string>
    <string name="product_name_text">Nome do item:</string>
    <string name="vendor_text">Fornecedor:</string>
    <string name="serial_information_text">Número de Série:</string>
    <string name="model_text">Modelo:</string>
    <string name="type_text">Tipo:</string>
    <string name="description_text">Descrição:</string>
    <string name="new_number_text">Nova Placa:</string>
    <string name="scan_button_text">Escanear Código de Barras</string>
    <string name="insert_password_text">Insira a senha:</string>
    <string name="acess_button">Acessar</string>
    <string name="scan_new_button">Escanear</string>
    <string name="scan_serial_number_text">Escanear Número de Série</string>
</resources>
