<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexandre.datacollector.MainActivity">


    <TextView
    android:id="@+id/textView"
    style="@style/TitleStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/work_sans_light"
    android:text="@string/app_name"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.24000001" />

    <Button
    android:id="@+id/add_main_button"
    style="@style/PrimaryButton"
    android:layout_width="225dp"
    android:layout_height="wrap_content"
    android:text="@string/add_item_text"
    app:layout_constraintBottom_toTopOf="@+id/main_consult_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.508"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.725" />

    <Button
    android:id="@+id/main_consult_button"
    style="@style/SecondaryButton"
    android:layout_width="225dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="124dp"
    android:layout_marginEnd="8dp"
    android:text="@string/consult_data"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

    </android.support.constraint.ConstraintLayout>

</layout>
