<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="itemViewModel"
            type="com.example.alexandre.datacollector.item.ItemViewModel"/>
    </data>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/seek_bar"
                android:layout_width="339dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                app:isb_indicator_text_size="20sp"
                app:isb_max="75"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_thumb_adjust_auto="true"
                app:isb_tick_texts_size="13sp"
                app:isb_ticks_count="4"
                app:isb_track_progress_color="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/item_status_text"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/t3_dropdown_list"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorTextField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/item_location"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

            <TextView
                android:id="@+id/textView8"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/observation_text"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t3_dropdown_list" />

            <EditText
                android:id="@+id/t3_observation_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@={itemViewModel.observation}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:text="@string/add_picture_text"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t3_observation_text" />

            <ImageButton
                android:id="@+id/t3_camera_button"
                android:layout_width="71dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/secondary_button"
                android:contentDescription="@string/content_description_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.877"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/t3_observation_text"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/t3_finish_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/primary_button"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.0" />
            <!--app:layout_constraintTop_toBottomOf="@+id/imageView2"/> -->

            <!--<ImageView-->
            <!--android:id="@+id/imageView2"-->
            <!--android:layout_width="207dp"-->
            <!--android:layout_height="186dp"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="25dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/textView9"-->
            <!--app:srcCompat="@android:drawable/ic_menu_report_image" />-->

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>
